<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Search Shortcut -->
    <shortcut
        android:shortcutId="search"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_search"
        android:shortcutShortLabel="@string/shortcut_search_short"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.rpeters.jellyfin"
            android:targetClass="com.rpeters.jellyfin.MainActivity">
            <extra
                android:name="destination"
                android:value="search" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <!-- Favorites Shortcut -->
    <shortcut
        android:shortcutId="favorites"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_favorite"
        android:shortcutShortLabel="@string/shortcut_favorites_short"
        android:shortcutLongLabel="@string/shortcut_favorites_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.rpeters.jellyfin"
            android:targetClass="com.rpeters.jellyfin.MainActivity">
            <extra
                android:name="destination"
                android:value="favorites" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <!-- Continue Watching Shortcut -->
    <shortcut
        android:shortcutId="continue_watching"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_continue"
        android:shortcutShortLabel="@string/shortcut_continue_watching_short"
        android:shortcutLongLabel="@string/shortcut_continue_watching_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.rpeters.jellyfin"
            android:targetClass="com.rpeters.jellyfin.MainActivity">
            <extra
                android:name="destination"
                android:value="home" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <!-- Library Shortcut -->
    <shortcut
        android:shortcutId="library"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_library"
        android:shortcutShortLabel="@string/shortcut_library_short"
        android:shortcutLongLabel="@string/shortcut_library_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.rpeters.jellyfin"
            android:targetClass="com.rpeters.jellyfin.MainActivity">
            <extra
                android:name="destination"
                android:value="library" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

</shortcuts>
